<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Digite_seu_peso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/Peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="89dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Digite_sua_altura"
        app:layout_constraintTop_toBottomOf="@+id/Peso"
        tools:layout_editor_absoluteX="138dp" />

    <EditText
        android:id="@+id/Altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="89dp" />

    <Button
        android:id="@+id/Calcular"
        android:layout_width="105dp"
        android:layout_height="65dp"
        android:layout_marginTop="68dp"
        android:text="@string/Botao_calcular"
        app:layout_constraintTop_toBottomOf="@+id/ApresentaSituacao"
        tools:layout_editor_absoluteX="71dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Situacao_do_seu_imc"
        app:layout_constraintTop_toBottomOf="@+id/ResultadoImc"
        tools:layout_editor_absoluteX="131dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Seu_imc_e"
        app:layout_constraintTop_toBottomOf="@+id/Altura"
        tools:layout_editor_absoluteX="151dp" />

    <EditText
        android:id="@+id/ResultadoImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="89dp" />

    <EditText
        android:id="@+id/ApresentaSituacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="89dp" />

    <Button
        android:id="@+id/Limpar"
        android:layout_width="101dp"
        android:layout_height="58dp"
        android:layout_marginTop="80dp"
        android:text="@string/Limpar"
        app:layout_constraintTop_toBottomOf="@+id/ApresentaSituacao"
        tools:layout_editor_absoluteX="201dp" />

</android.support.constraint.ConstraintLayout>